--- a/Openclash_Config.yaml
+++ b/Openclash_Config.yaml
@@ -98,8 +98,8 @@ dns:
   enable: true
   listen: 0.0.0.0:1053
   ipv6: false
-  respect-rules: true
   enhanced-mode: fake-ip
+  respect-rules: true
   fake-ip-range: 28.0.0.1/8
   fake-ip-filter-mode: blacklist
   fake-ip-filter:
@@ -108,14 +108,31 @@ dns:
     - "+.msftncsi.com"
     - "time.*.com"
     - "+.market.xiaomi.com"
+
+  # 国内直连优先的基础DNS（快速响应）
   default-nameserver:
     - 223.5.5.5
-  proxy-server-nameserver:
     - 119.29.29.29
-  # namesever尽量用运营商提供的DNS
+
+  # 代理下使用的主DNS（防劫持）
   nameserver:
+    - https://1.1.1.1/dns-query
+    - https://dns.google/dns-query
     - 223.5.5.5
     - 119.29.29.29
+
+  # fallback：当主DNS无法正确返回时，使用这些
+  fallback:
+    - https://dns.cloudflare.com/dns-query
+    - https://doh.opendns.com/dns-query
+    - 8.8.8.8
+    - 1.1.1.1
+
+  fallback-filter:
+    geoip: true
+    geoip-code: CN
+    ipcidr:
+      - 240.0.0.0/4
  
 # 出站策略，根据自己情况调整每个策略里分组排序，增删都可以，比如把美国自动放到第一个，比如删除香港故转，注意别漏掉表情逗号等。
 # 如果相应分组没有筛选到对应的国家，请根据自己节点名字调整筛选关键字。
